# CloudGuessr

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package.xml
config/: cloudguessr.rviz  default.yaml
docs/: 1_PRD.md  2_Architecture_n_Tests.md  3_debug_logs.md  BUG_NOTES.md
include/cloudguessr/backend/: feedback.hpp  icp.hpp  io.hpp  preprocess.hpp  roi.hpp  round_dataset.hpp  scoring.hpp  types.hpp
launch/: cloudguessr.launch.py
scripts/: cloudguessr_gui.py  hmi_display.py  query_viewer.py
src/backend/: feedback.cpp  icp.cpp  io.cpp  preprocess.cpp  roi.cpp  round_dataset.cpp  scoring.cpp
src/nodes/: map_server_node.cpp  round_manager_node.cpp
test/assets/: map_small.pcd
test/assets/round_0001/: query.pcd  round.yaml
test/integration/: test_pipeline_e2e.cpp
test/unit/: test_feedback.cpp  test_icp.cpp  test_io.cpp  test_preprocess.cpp  test_roi.cpp  test_round_dataset.cpp  test_scoring.cpp
tools/: generate_rounds.py
